--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "db:generate": "drizzle-kit generate:sqlite",
     "db:push": "drizzle-kit push:sqlite",
     "db:migrate": "node ./scripts/drizzle-migrate.mjs",
-    "app:deploy": "fly deploy --remote-only"
+    "app:deploy": "fly deploy --remote-only",
+    "prepare": "husky"
   },
   "dependencies": {
     "@radix-ui/themes": "2.0.3",
@@ -31,6 +32,7 @@
     "zod": "3.22.4"
   },
   "devDependencies": {
+    "@biomejs/biome": "1.6.1",
     "@flydotio/dockerfile": "0.5.2",
     "@types/better-sqlite3": "7.6.9",
     "@types/node": "20.11.27",
@@ -41,15 +43,20 @@
     "eslint": "8.57.0",
     "eslint-config-next": "14.1.3",
     "eslint-plugin-tailwindcss": "3.15.1",
+    "husky": "9.0.11",
+    "lint-staged": "15.2.2",
     "postcss": "8.4.35",
     "radix-themes-tw": "0.2.1",
     "tailwindcss": "3.4.1",
     "typescript": "5.4.2"
   },
+  "lint-staged": {
+    "*": [
+      "biome check --apply --no-errors-on-unmatched --files-ignore-unknown=true"
+    ]
+  },
   "dockerfile": {
     "alpine": true,
-    "secrets": [
-      "CHAINHOOKS_API_TOKEN"
-    ]
+    "secrets": ["CHAINHOOKS_API_TOKEN"]
   }
 }
