--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
+    "format": "biome check --apply --no-errors-on-unmatched --files-ignore-unknown=true .",
+    "chainhooks:generate": "dotenvx run --env-file=.env.production.local --env-file=.env.production -- node ./scripts/generate-chainhooks.mjs",
     "db:generate": "drizzle-kit generate:sqlite",
     "db:push": "drizzle-kit push:sqlite",
     "db:migrate": "node ./scripts/drizzle-migrate.mjs",
@@ -16,6 +18,7 @@
   "dependencies": {
     "@radix-ui/themes": "2.0.3",
     "@stacks/transactions": "6.12.0",
+    "@t3-oss/env-core": "0.9.2",
     "@t3-oss/env-nextjs": "0.9.2",
     "@tabler/icons-react": "3.1.0",
     "better-sqlite3": "9.4.3",
@@ -34,6 +37,7 @@
   },
   "devDependencies": {
     "@biomejs/biome": "1.6.1",
+    "@dotenvx/dotenvx": "0.25.1",
     "@flydotio/dockerfile": "0.5.2",
     "@types/better-sqlite3": "7.6.9",
     "@types/node": "20.11.27",
