--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "next": "14.1.3",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "recharts": "2.12.3",
     "sharp": "0.33.2",
     "tailwind-merge": "2.2.1",
     "tailwindcss-animate": "1.0.7",
