--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "stackspulse",
   "version": "0.0.1",
   "private": true,
+  "packageManager": "pnpm@8.15.2",
   "scripts": {
     "dev": "next dev",
     "build": "next build",
@@ -44,16 +45,16 @@
     "@types/node": "20.11.30",
     "@types/react": "18.2.67",
     "@types/react-dom": "18.2.22",
-    "autoprefixer": "10.4.18",
+    "autoprefixer": "10.4.19",
     "drizzle-kit": "0.20.14",
     "eslint": "8.57.0",
     "eslint-config-next": "14.1.4",
     "eslint-plugin-tailwindcss": "3.15.1",
     "lint-staged": "15.2.2",
-    "postcss": "8.4.37",
+    "postcss": "8.4.38",
     "radix-themes-tw": "0.2.1",
     "tailwindcss": "3.4.1",
-    "typescript": "5.4.2"
+    "typescript": "5.4.3"
   },
   "lint-staged": {
     "*": [
