--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "class-variance-authority": "0.7.0",
     "clsx": "2.1.0",
     "drizzle-orm": "0.30.4",
+    "fathom-client": "3.6.0",
     "husky": "9.0.11",
     "javascript-time-ago": "2.5.9",
     "next": "14.1.4",
