--- a/.env.development
+++ b/.env.development
@@ -1,3 +1,6 @@
 NEXT_TELEMETRY_DISABLED=1
 CHAINHOOKS_API_TOKEN=dev-api-token
 DATABASE_PATH=./sqlite.db
+
+# Client environment variables
+NEXT_PUBLIC_BASE_URL=http://localhost:3000
