--- a/.env.development
+++ b/.env.development
@@ -1,6 +1,11 @@
 NEXT_TELEMETRY_DISABLED=1
 CHAINHOOKS_API_TOKEN=dev-api-token
+CRON_API_TOKEN=dev-api-token
 DATABASE_PATH=./sqlite.db
+TWITTER_API_KEY=dev
+TWITTER_API_SECRET_KEY=dev
+TWITTER_ACCESS_TOKEN=dev
+TWITTER_ACCESS_TOKEN_SECRET=dev
 
 # Client environment variables
 NEXT_PUBLIC_BASE_URL=http://localhost:3000
