--- a/.env.production.build
+++ b/.env.production.build
@@ -2,3 +2,7 @@
 NEXT_TELEMETRY_DISABLED=1
 CHAINHOOKS_API_TOKEN=dev-api-token
 DATABASE_PATH=./sqlite.db
+TWITTER_API_KEY=dev
+TWITTER_API_SECRET_KEY=dev
+TWITTER_ACCESS_TOKEN=dev
+TWITTER_ACCESS_TOKEN_SECRET=dev
