--- a/.env.production.build
+++ b/.env.production.build
@@ -1,6 +1,7 @@
 # file used by the CI to build the app
 NEXT_TELEMETRY_DISABLED=1
 CHAINHOOKS_API_TOKEN=dev-api-token
+CRON_API_TOKEN=dev-api-token
 DATABASE_PATH=./sqlite.db
 TWITTER_API_KEY=dev
 TWITTER_API_SECRET_KEY=dev
