--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
   },
   "dependencies": {
     "@dotenvx/dotenvx": "0.26.0",
-    "@radix-ui/themes": "2.0.3",
+    "@radix-ui/themes": "3.0.0",
     "@stacks/transactions": "6.13.0",
     "@t3-oss/env-core": "0.9.2",
     "@t3-oss/env-nextjs": "0.9.2",
@@ -37,6 +37,7 @@
     "sharp": "0.33.3",
     "tailwind-merge": "2.2.2",
     "tailwindcss-animate": "1.0.7",
+    "twitter-api-v2": "1.16.1",
     "zod": "3.22.4"
   },
   "devDependencies": {
