--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "stackspulse",
   "version": "0.0.1",
   "private": true,
-  "packageManager": "pnpm@9.0.5",
+  "packageManager": "pnpm@9.1.1",
   "scripts": {
     "dev": "next dev",
     "build": "next build",
@@ -10,48 +10,48 @@
     "lint": "next lint",
     "format": "biome check --apply --no-errors-on-unmatched --files-ignore-unknown=true .",
     "chainhooks:generate": "dotenvx run --env-file=.env.production.local --env-file=.env.production -- node ./scripts/generate-chainhooks.mjs",
-    "db:generate": "drizzle-kit generate:sqlite",
-    "db:push": "drizzle-kit push:sqlite",
+    "db:generate": "drizzle-kit generate",
+    "db:push": "drizzle-kit push",
     "db:migrate": "node ./scripts/drizzle-migrate.mjs",
     "app:deploy": "fly deploy --remote-only",
     "prepare": "husky"
   },
   "dependencies": {
-    "@dotenvx/dotenvx": "0.32.0",
-    "@radix-ui/themes": "3.0.2",
-    "@stacks/transactions": "6.13.1",
-    "@t3-oss/env-core": "0.9.2",
-    "@t3-oss/env-nextjs": "0.9.2",
-    "@tabler/icons-react": "3.2.0",
-    "better-sqlite3": "9.5.0",
+    "@dotenvx/dotenvx": "0.39.0",
+    "@radix-ui/themes": "3.0.5",
+    "@stacks/transactions": "6.15.0",
+    "@t3-oss/env-core": "0.10.1",
+    "@t3-oss/env-nextjs": "0.10.1",
+    "@tabler/icons-react": "3.4.0",
+    "better-sqlite3": "10.0.0",
     "class-variance-authority": "0.7.0",
-    "clsx": "2.1.0",
-    "drizzle-orm": "0.30.8",
+    "clsx": "2.1.1",
+    "drizzle-orm": "0.30.10",
     "fathom-client": "3.6.0",
     "husky": "9.0.11",
-    "javascript-time-ago": "2.5.9",
-    "next": "14.2.0",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "recharts": "2.12.4",
-    "sharp": "0.33.3",
-    "tailwind-merge": "2.2.2",
+    "javascript-time-ago": "2.5.10",
+    "next": "14.2.3",
+    "react": "18.3.1",
+    "react-dom": "18.3.1",
+    "recharts": "2.12.7",
+    "sharp": "0.33.4",
+    "tailwind-merge": "2.3.0",
     "tailwindcss-animate": "1.0.7",
     "twitter-api-v2": "1.16.1",
-    "zod": "3.22.4"
+    "zod": "3.23.8"
   },
   "devDependencies": {
-    "@biomejs/biome": "1.6.4",
-    "@flydotio/dockerfile": "0.5.4",
-    "@types/better-sqlite3": "7.6.9",
-    "@types/node": "20.12.7",
-    "@types/react": "18.2.77",
-    "@types/react-dom": "18.2.25",
+    "@biomejs/biome": "1.7.3",
+    "@flydotio/dockerfile": "0.5.7",
+    "@types/better-sqlite3": "7.6.10",
+    "@types/node": "20.12.12",
+    "@types/react": "18.3.2",
+    "@types/react-dom": "18.3.0",
     "autoprefixer": "10.4.19",
-    "drizzle-kit": "0.20.14",
+    "drizzle-kit": "0.21.2",
     "eslint": "8.57.0",
-    "eslint-config-next": "14.2.0",
-    "eslint-plugin-tailwindcss": "3.15.1",
+    "eslint-config-next": "14.2.3",
+    "eslint-plugin-tailwindcss": "3.15.2",
     "lint-staged": "15.2.2",
     "postcss": "8.4.38",
     "radix-themes-tw": "0.2.3",
