--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -25,6 +25,11 @@ jobs:
         run: pnpm install
 
       - name: Create Release Pull Request
+        id: changesets
         uses: changesets/action@v1
+        with:
+          publish: pnpm run release
+          commit: 'chore: release'
+          title: 'chore: create new release'
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
