--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,6 +4,9 @@
     "source.organizeImports.biome": "explicit",
     "quickfix.biome": "explicit"
   },
+  "[javascript]": {
+    "editor.defaultFormatter": "biomejs.biome"
+  },
   "[typescriptreact]": {
     "editor.defaultFormatter": "biomejs.biome"
   },
