--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -14,7 +14,7 @@ jobs:
 
     permissions:
       contents: write
-      pull-request: write
+      pull-requests: write
     
     steps:
       - uses: actions/checkout@v3
