--- a/package.json
+++ b/package.json
@@ -13,8 +13,8 @@
     "db:generate": "drizzle-kit generate",
     "db:push": "drizzle-kit push",
     "db:migrate": "node ./scripts/drizzle-migrate.mjs",
-    "version": "pnpm changeset version",
-    "release": "node scripts/create-release.mjs && pnpm changeset publish",
+    "version": "pnpm changeset version && node scripts/create-release.mjs",
+    "release": "pnpm changeset publish",
     "deploy": "fly deploy --remote-only",
     "prepare": "husky"
   },
