feat: setup sentry

--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   "dependencies": {
     "@dotenvx/dotenvx": "0.40.0",
     "@radix-ui/themes": "3.0.5",
+    "@sentry/nextjs": "8.2.1",
     "@stacks/transactions": "6.15.0",
     "@t3-oss/env-core": "0.10.1",
     "@t3-oss/env-nextjs": "0.10.1",
