feat: use libsql (#40)

--- a/package.json
+++ b/package.json
@@ -20,13 +20,13 @@
   },
   "dependencies": {
     "@dotenvx/dotenvx": "0.40.0",
+    "@libsql/client": "0.4.3",
     "@radix-ui/themes": "3.0.5",
     "@sentry/nextjs": "8.2.1",
     "@stacks/transactions": "6.15.0",
     "@t3-oss/env-core": "0.10.1",
     "@t3-oss/env-nextjs": "0.10.1",
     "@tabler/icons-react": "3.4.0",
-    "better-sqlite3": "10.0.0",
     "class-variance-authority": "0.7.0",
     "clsx": "2.1.1",
     "drizzle-orm": "0.30.10",
@@ -47,7 +47,6 @@
     "@biomejs/biome": "1.7.3",
     "@changesets/cli": "2.27.2",
     "@flydotio/dockerfile": "0.5.7",
-    "@types/better-sqlite3": "7.6.10",
     "@types/node": "20.12.12",
     "@types/react": "18.3.2",
     "@types/react-dom": "18.3.0",
