--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "format": "biome check --apply --no-errors-on-unmatched --files-ignore-unknown=true .",
+    "format": "biome check --write --no-errors-on-unmatched --files-ignore-unknown=true .",
     "chainhooks:generate": "dotenvx run --env-file=.env.production.local --env-file=.env.production -- node ./scripts/generate-chainhooks.mjs",
     "db:generate": "drizzle-kit generate",
     "db:push": "drizzle-kit push",
@@ -22,11 +22,11 @@
     "@dotenvx/dotenvx": "0.40.0",
     "@libsql/client": "0.4.3",
     "@radix-ui/themes": "3.0.5",
-    "@sentry/nextjs": "8.2.1",
+    "@sentry/nextjs": "8.8.0",
     "@stacks/transactions": "6.15.0",
     "@t3-oss/env-core": "0.10.1",
     "@t3-oss/env-nextjs": "0.10.1",
-    "@tabler/icons-react": "3.4.0",
+    "@tabler/icons-react": "3.5.0",
     "class-variance-authority": "0.7.0",
     "clsx": "2.1.1",
     "drizzle-orm": "0.30.10",
@@ -40,25 +40,25 @@
     "sharp": "0.33.4",
     "tailwind-merge": "2.3.0",
     "tailwindcss-animate": "1.0.7",
-    "twitter-api-v2": "1.16.1",
+    "twitter-api-v2": "1.17.1",
     "zod": "3.23.8"
   },
   "devDependencies": {
-    "@biomejs/biome": "1.7.3",
-    "@changesets/cli": "2.27.3",
+    "@biomejs/biome": "1.8.0",
+    "@changesets/cli": "2.27.5",
     "@flydotio/dockerfile": "0.5.7",
-    "@types/node": "20.12.12",
-    "@types/react": "18.3.2",
+    "@types/node": "20.14.2",
+    "@types/react": "18.3.3",
     "@types/react-dom": "18.3.0",
     "autoprefixer": "10.4.19",
     "drizzle-kit": "0.21.2",
     "eslint": "8.57.0",
     "eslint-config-next": "14.2.3",
-    "eslint-plugin-tailwindcss": "3.15.2",
-    "lint-staged": "15.2.2",
+    "eslint-plugin-tailwindcss": "3.17.3",
+    "lint-staged": "15.2.5",
     "postcss": "8.4.38",
     "radix-themes-tw": "0.2.3",
-    "tailwindcss": "3.4.3",
+    "tailwindcss": "3.4.4",
     "typescript": "5.4.5"
   },
   "lint-staged": {
