--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "format": "biome check --write --no-errors-on-unmatched --files-ignore-unknown=true .",
+    "format": "biome check --write --no-errors-on-unmatched --files-ignore-unknown=true",
     "chainhooks:generate": "dotenvx run --env-file=.env.production.local --env-file=.env.production -- node ./scripts/generate-chainhooks.mjs",
     "db:generate": "drizzle-kit generate",
     "db:push": "drizzle-kit push",
@@ -29,7 +29,7 @@
     "@tabler/icons-react": "3.5.0",
     "class-variance-authority": "0.7.0",
     "clsx": "2.1.1",
-    "drizzle-orm": "0.30.10",
+    "drizzle-orm": "0.31.1",
     "fathom-client": "3.6.0",
     "husky": "9.0.11",
     "javascript-time-ago": "2.5.10",
@@ -51,7 +51,7 @@
     "@types/react": "18.3.3",
     "@types/react-dom": "18.3.0",
     "autoprefixer": "10.4.19",
-    "drizzle-kit": "0.21.2",
+    "drizzle-kit": "0.22.4",
     "eslint": "8.57.0",
     "eslint-config-next": "14.2.3",
     "eslint-plugin-tailwindcss": "3.17.3",
