--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "husky": "9.0.11",
     "javascript-time-ago": "2.5.10",
     "next": "14.2.4",
+    "postgres": "3.4.4",
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "recharts": "2.12.7",
