--- a/ansible/ssh/tasks/main.yml
+++ b/ansible/ssh/tasks/main.yml
@@ -1,14 +1,14 @@
 ---
 - name: Ensure the user directory exists
   file:
-    path: /home/root/.ssh
+    path: /root/.ssh
     state: directory
     mode: '0700'
 
 - name: Copy SSH key from local machine to the server
   copy:
     src: "{{ ssh_key_path }}"
-    dest: /home/root/.ssh/authorized_keys
+    dest: /root/.ssh/authorized_keys
     mode: '0600'
 
 - name: Update SSH configuration to be more secure
