--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@t3-oss/env-core": "0.10.1",
     "@t3-oss/env-nextjs": "0.10.1",
     "@tabler/icons-react": "3.6.0",
+    "@tanstack/react-query": "5.50.1",
     "class-variance-authority": "0.7.0",
     "clsx": "2.1.1",
     "drizzle-orm": "0.31.2",
