--- a/package.json
+++ b/package.json
@@ -37,7 +37,7 @@
     "next": "14.2.4",
     "react": "18.3.1",
     "react-dom": "18.3.1",
-    "recharts": "2.12.7",
+    "recharts": "2.13.0-alpha.4",
     "sharp": "0.33.4",
     "tailwind-merge": "2.3.0",
     "tailwindcss-animate": "1.0.7",
