--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@t3-oss/env-core": "0.10.1",
     "@t3-oss/env-nextjs": "0.10.1",
     "@tabler/icons-react": "3.6.0",
+    "@tanstack/react-query": "5.50.1",
     "class-variance-authority": "0.7.0",
     "clsx": "2.1.1",
     "drizzle-orm": "0.31.2",
@@ -36,7 +37,7 @@
     "next": "14.2.4",
     "react": "18.3.1",
     "react-dom": "18.3.1",
-    "recharts": "2.12.7",
+    "recharts": "2.13.0-alpha.4",
     "sharp": "0.33.4",
     "tailwind-merge": "2.3.0",
     "tailwindcss-animate": "1.0.7",
