--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@tanstack/react-query": "5.50.1",
     "class-variance-authority": "0.7.0",
     "clsx": "2.1.1",
+    "date-fns": "3.6.0",
     "drizzle-orm": "0.31.2",
     "fathom-client": "3.7.0",
     "husky": "9.0.11",
