--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
     "eslint-plugin-tailwindcss": "3.17.4",
     "lint-staged": "15.2.7",
     "postcss": "8.4.39",
+    "prisma": "5.16.1",
     "radix-themes-tw": "0.2.3",
     "tailwindcss": "3.4.4",
     "typescript": "5.5.3"
