--- a/.env.production.build
+++ b/.env.production.build
@@ -3,6 +3,7 @@ NEXT_TELEMETRY_DISABLED=1
 CHAINHOOKS_API_TOKEN=dev-api-token
 CRON_API_TOKEN=dev-api-token
 DATABASE_PATH=file:sqlite.db
+DATABASE_URL=postgresql://postgres:postgres@postgres:5432/postgres?schema=public
 TWITTER_API_KEY=dev
 TWITTER_API_SECRET_KEY=dev
 TWITTER_ACCESS_TOKEN=dev
