--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "tailwind-merge": "2.3.0",
     "tailwindcss-animate": "1.0.7",
     "twitter-api-v2": "1.17.1",
+    "unstorage": "1.10.2",
     "zod": "3.23.8"
   },
   "devDependencies": {
