--- a/package.json
+++ b/package.json
@@ -13,16 +13,17 @@
     "db:generate": "drizzle-kit generate",
     "db:push": "drizzle-kit push",
     "db:migrate": "node ./scripts/drizzle-migrate.mjs",
+    "stacks-node:db:pull": "dotenvx run --env-file=.env.production.local --env-file=.env.production -- prisma db pull",
     "version": "pnpm changeset version && node scripts/create-release.mjs",
     "release": "pnpm changeset publish",
     "deploy": "fly deploy --remote-only",
     "prepare": "husky"
   },
   "dependencies": {
-    "@dotenvx/dotenvx": "0.44.2",
+    "@dotenvx/dotenvx": "1.6.1",
     "@libsql/client": "0.4.3",
     "@radix-ui/themes": "3.0.5",
-    "@sentry/nextjs": "8.14.0",
+    "@sentry/nextjs": "8.17.0",
     "@stacks/transactions": "6.15.0",
     "@t3-oss/env-core": "0.10.1",
     "@t3-oss/env-nextjs": "0.10.1",
@@ -32,10 +33,11 @@
     "clsx": "2.1.1",
     "date-fns": "3.6.0",
     "drizzle-orm": "0.31.2",
-    "fathom-client": "3.7.0",
+    "fathom-client": "3.7.2",
     "husky": "9.0.11",
     "javascript-time-ago": "2.5.10",
-    "next": "14.2.4",
+    "next": "14.2.5",
+    "postgres": "3.4.4",
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "recharts": "2.13.0-alpha.4",
@@ -43,6 +45,7 @@
     "tailwind-merge": "2.3.0",
     "tailwindcss-animate": "1.0.7",
     "twitter-api-v2": "1.17.1",
+    "unstorage": "1.10.2",
     "zod": "3.23.8"
   },
   "devDependencies": {
@@ -55,10 +58,11 @@
     "autoprefixer": "10.4.19",
     "drizzle-kit": "0.22.7",
     "eslint": "8.57.0",
-    "eslint-config-next": "14.2.4",
+    "eslint-config-next": "14.2.5",
     "eslint-plugin-tailwindcss": "3.17.4",
     "lint-staged": "15.2.7",
     "postcss": "8.4.39",
+    "prisma": "5.16.2",
     "radix-themes-tw": "0.2.3",
     "tailwindcss": "3.4.4",
     "typescript": "5.5.3"
