--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   "dependencies": {
     "@dotenvx/dotenvx": "1.6.1",
     "@libsql/client": "0.4.3",
+    "@prisma/client": "5.16.2",
     "@radix-ui/themes": "3.0.5",
     "@sentry/nextjs": "8.17.0",
     "@stacks/transactions": "6.15.0",
