--- a/.github/workflows/cron-weekly.yml
+++ b/.github/workflows/cron-weekly.yml
@@ -9,7 +9,7 @@ jobs:
   cron:
     runs-on: ubuntu-latest
     steps:
-      - name: hourly-cron-job
+      - name: weekly-cron-job
         run: |
           curl --request GET \
           --url 'https://www.stackspulse.com/api/cron/weekly-users' \
