--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "version": "pnpm changeset version && node scripts/create-release.mjs",
     "release": "pnpm changeset publish",
     "deploy": "fly deploy --remote-only",
-    "prepare": "husky && prisma generate"
+    "prepare": "husky"
   },
   "dependencies": {
     "@dotenvx/dotenvx": "1.6.1",
@@ -25,15 +25,15 @@
     "@prisma/client": "5.16.2",
     "@radix-ui/themes": "3.0.5",
     "@sentry/nextjs": "8.17.0",
-    "@stacks/transactions": "6.15.0",
+    "@stacks/transactions": "6.16.1",
     "@t3-oss/env-core": "0.10.1",
     "@t3-oss/env-nextjs": "0.10.1",
-    "@tabler/icons-react": "3.6.0",
-    "@tanstack/react-query": "5.50.1",
+    "@tabler/icons-react": "3.10.0",
+    "@tanstack/react-query": "5.51.1",
     "class-variance-authority": "0.7.0",
     "clsx": "2.1.1",
     "date-fns": "3.6.0",
-    "drizzle-orm": "0.31.2",
+    "drizzle-orm": "0.32.0",
     "fathom-client": "3.7.2",
     "husky": "9.0.11",
     "javascript-time-ago": "2.5.10",
@@ -44,7 +44,7 @@
     "react-dom": "18.3.1",
     "recharts": "2.13.0-alpha.4",
     "sharp": "0.33.4",
-    "tailwind-merge": "2.3.0",
+    "tailwind-merge": "2.4.0",
     "tailwindcss-animate": "1.0.7",
     "twitter-api-v2": "1.17.1",
     "unstorage": "1.10.2",
@@ -53,12 +53,12 @@
   "devDependencies": {
     "@biomejs/biome": "1.8.3",
     "@changesets/cli": "2.27.7",
-    "@flydotio/dockerfile": "0.5.7",
-    "@types/node": "20.14.9",
+    "@flydotio/dockerfile": "0.5.8",
+    "@types/node": "20.14.10",
     "@types/react": "18.3.3",
     "@types/react-dom": "18.3.0",
     "autoprefixer": "10.4.19",
-    "drizzle-kit": "0.22.7",
+    "drizzle-kit": "0.23.0",
     "eslint": "8.57.0",
     "eslint-config-next": "14.2.5",
     "eslint-plugin-tailwindcss": "3.17.4",
