--- a/package.json
+++ b/package.json
@@ -65,6 +65,7 @@
     "prisma": "5.16.2",
     "radix-themes-tw": "0.2.3",
     "tailwindcss": "3.4.4",
+    "turbo": "2.0.7",
     "typescript": "5.5.3"
   },
   "lint-staged": {
