--- a/apps/server/tsconfig.json
+++ b/apps/server/tsconfig.json
@@ -1,4 +1,7 @@
 // https://nitro.unjs.io/guide/typescript
 {
-  "extends": "./.nitro/types/tsconfig.json"
+  "extends": "./.nitro/types/tsconfig.json",
+  "compilerOptions": {
+    "strict": true
+  }
 }
