--- a/package.json
+++ b/package.json
@@ -3,18 +3,20 @@
   "private": true,
   "packageManager": "pnpm@9.5.0",
   "scripts": {
+    "build": "pnpm turbo run build",
     "format": "biome check --write --no-errors-on-unmatched --files-ignore-unknown=true",
     "version": "pnpm changeset version && node scripts/create-release.mjs",
     "release": "pnpm changeset publish",
     "prepare": "husky"
   },
   "dependencies": {
-    "husky": "9.0.11"
+    "husky": "9.1.0"
   },
   "devDependencies": {
     "@biomejs/biome": "1.8.3",
     "@changesets/cli": "2.27.7",
-    "lint-staged": "15.2.7"
+    "lint-staged": "15.2.7",
+    "turbo": "2.0.7"
   },
   "lint-staged": {
     "*": [
