--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -43,4 +43,6 @@ jobs:
         run: pnpm install
 
       - name: Build
-        run: cp .env.production.build .env.production.local && pnpm build
+        run:
+          cp ./apps/web/.env.production.build ./apps/web/.env.production.local
+          pnpm build
