--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -2,22 +2,17 @@
   "name": "stackspulse",
   "version": "0.5.2",
   "private": true,
-  "packageManager": "pnpm@9.5.0",
   "scripts": {
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "format": "biome check --write --no-errors-on-unmatched --files-ignore-unknown=true",
     "chainhooks:generate": "dotenvx run --env-file=.env.production.local --env-file=.env.production -- node ./scripts/generate-chainhooks.mjs",
     "db:generate": "drizzle-kit generate",
     "db:push": "drizzle-kit push",
     "db:migrate": "node ./scripts/drizzle-migrate.mjs",
     "stacks-node:db:pull": "dotenvx run --env-file=.env.production.local --env-file=.env.production -- prisma db pull",
-    "version": "pnpm changeset version && node scripts/create-release.mjs",
-    "release": "pnpm changeset publish",
-    "deploy": "fly deploy --remote-only",
-    "prepare": "husky"
+    "deploy": "fly deploy --remote-only"
   },
   "dependencies": {
     "@dotenvx/dotenvx": "1.6.1",
@@ -34,7 +29,6 @@
     "date-fns": "3.6.0",
     "drizzle-orm": "0.32.0",
     "fathom-client": "3.7.2",
-    "husky": "9.0.11",
     "javascript-time-ago": "2.5.10",
     "next": "14.2.5",
     "postgres": "3.4.4",
@@ -49,8 +43,6 @@
     "zod": "3.23.8"
   },
   "devDependencies": {
-    "@biomejs/biome": "1.8.3",
-    "@changesets/cli": "2.27.7",
     "@flydotio/dockerfile": "0.5.8",
     "@types/node": "20.14.10",
     "@types/react": "18.3.3",
@@ -60,17 +52,11 @@
     "eslint": "8.57.0",
     "eslint-config-next": "14.2.5",
     "eslint-plugin-tailwindcss": "3.17.4",
-    "lint-staged": "15.2.7",
     "postcss": "8.4.39",
     "prisma": "5.16.2",
     "radix-themes-tw": "0.2.3",
     "tailwindcss": "3.4.4",
     "typescript": "5.5.3"
-  },
-  "lint-staged": {
-    "*": [
-      "biome check --apply --no-errors-on-unmatched --files-ignore-unknown=true"
-    ]
   },
   "dockerfile": {
     "alpine": true,
