--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -97,7 +97,7 @@ jobs:
           tags: |
             type=ref,event=branch
             type=ref,event=pr
-            type=match,pattern=server@\d.\d.\d
+            type=match,pattern=\d.\d.\d
 
       - name: Build and push Docker image
         id: build-and-push
