feat: client call api for protocol users

--- a/apps/web/.env.development
+++ b/apps/web/.env.development
@@ -9,3 +9,4 @@ TWITTER_ACCESS_TOKEN_SECRET=dev
 
 # Client environment variables
 NEXT_PUBLIC_BASE_URL=http://localhost:3000
+NEXT_PUBLIC_API_URL=http://localhost:3001
