--- a/apps/web/.env.production
+++ b/apps/web/.env.production
@@ -1,4 +1,5 @@
 NEXT_TELEMETRY_DISABLED=1
 NEXT_PUBLIC_BASE_URL=https://www.stackspulse.com
+NEXT_PUBLIC_API_URL=https://api.stackspulse.com
 NEXT_PUBLIC_FATHOM_ID=LBVAPCKU
 NEXT_PUBLIC_SENTRY_DSN=https://3f94b824777d402bc61dab794efe0a31@o72928.ingest.us.sentry.io/4507282761187328
