--- a/apps/server/package.json
+++ b/apps/server/package.json
@@ -6,11 +6,13 @@
     "build": "nitro build",
     "dev": "dotenvx run --env-file=.env.development.local -- nitro dev --port 3001",
     "prepare": "nitro prepare",
-    "preview": "node .output/server/index.mjs"
+    "deploy": "fly deploy --remote-only"
   },
   "dependencies": {
     "@dotenvx/dotenvx": "1.6.1",
     "@t3-oss/env-core": "0.10.1",
+    "h3": "1.12.0",
+    "nitro-cors": "0.7.1",
     "postgres": "3.4.4",
     "zod": "3.23.8",
     "zod-validation-error": "3.3.0"
