--- a/apps/server/package.json
+++ b/apps/server/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@dotenvx/dotenvx": "1.6.1",
     "@t3-oss/env-core": "0.10.1",
+    "drizzle-orm": "0.32.0",
     "h3": "1.12.0",
     "nitro-cors": "0.7.1",
     "postgres": "3.4.4",
