--- a/apps/server/package.json
+++ b/apps/server/package.json
@@ -6,6 +6,7 @@
     "build": "nitro build",
     "dev": "dotenvx run --env-file=.env.development.local -- nitro dev --port 3001",
     "prepare": "nitro prepare",
+    "stacks-node:db:pull": "dotenvx run --env-file=.env.production.local --env-file=.env.production -- prisma db pull",
     "deploy": "fly deploy --remote-only"
   },
   "dependencies": {
@@ -19,6 +20,7 @@
     "zod-validation-error": "3.3.0"
   },
   "devDependencies": {
-    "nitropack": "2.9.7"
+    "nitropack": "2.9.7",
+    "prisma": "5.16.2"
   }
 }
