--- a/apps/server/fly.toml
+++ b/apps/server/fly.toml
@@ -3,7 +3,7 @@ primary_region = 'sjc'
 
 [build]
 # Comment next line to deploy the app from source code
-image = 'ghcr.io/pradel/stackspulse/server:0.7.2'
+image = "ghcr.io/pradel/stackspulse/server:0.9.0"
 
 [http_service]
   internal_port = 3000
