--- a/apps/server/package.json
+++ b/apps/server/package.json
@@ -17,6 +17,7 @@
     "h3": "1.12.0",
     "nitro-cors": "0.7.1",
     "postgres": "3.4.4",
+    "unstorage": "1.10.2",
     "zod": "3.23.8",
     "zod-validation-error": "3.3.1"
   },
