--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -18,6 +18,7 @@
     "@libsql/client": "0.3.3",
     "@radix-ui/themes": "3.0.5",
     "@sentry/nextjs": "8.25.0",
+    "@stacks/stacks-blockchain-api-types": "7.13.2",
     "@stacks/transactions": "6.16.1",
     "@t3-oss/env-core": "0.11.0",
     "@t3-oss/env-nextjs": "0.11.0",
