--- a/apps/server/package.json
+++ b/apps/server/package.json
@@ -13,6 +13,7 @@
     "@dotenvx/dotenvx": "1.7.0",
     "@libsql/client": "0.8.0",
     "@sentry/node": "8.25.0",
+    "@stacks/stacks-blockchain-api-types": "7.13.2",
     "@t3-oss/env-core": "0.11.0",
     "drizzle-orm": "0.33.0",
     "h3": "1.12.0",
