--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -15,6 +15,7 @@
   },
   "dependencies": {
     "@dotenvx/dotenvx": "1.7.0",
+    "@hirosystems/token-metadata-api-client": "1.3.0",
     "@libsql/client": "0.3.3",
     "@radix-ui/themes": "3.0.5",
     "@sentry/nextjs": "8.25.0",
