--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -14,10 +14,12 @@
     "deploy": "fly deploy --remote-only"
   },
   "dependencies": {
-    "@dotenvx/dotenvx": "1.6.4",
+    "@dotenvx/dotenvx": "1.7.0",
+    "@hirosystems/token-metadata-api-client": "1.3.0",
     "@libsql/client": "0.3.3",
     "@radix-ui/themes": "3.0.5",
     "@sentry/nextjs": "8.25.0",
+    "@stacks/stacks-blockchain-api-types": "7.13.2",
     "@stacks/transactions": "6.16.1",
     "@t3-oss/env-core": "0.11.0",
     "@t3-oss/env-nextjs": "0.11.0",
@@ -26,7 +28,7 @@
     "class-variance-authority": "0.7.0",
     "clsx": "2.1.1",
     "date-fns": "3.6.0",
-    "drizzle-orm": "0.32.1",
+    "drizzle-orm": "0.33.0",
     "fathom-client": "3.7.2",
     "javascript-time-ago": "2.5.10",
     "next": "14.2.5",
@@ -46,7 +48,7 @@
     "@types/react": "18.3.3",
     "@types/react-dom": "18.3.0",
     "autoprefixer": "10.4.20",
-    "drizzle-kit": "0.23.1",
+    "drizzle-kit": "0.24.0",
     "eslint": "8.57.0",
     "eslint-config-next": "14.2.5",
     "eslint-plugin-tailwindcss": "3.17.4",
