--- a/apps/server/package.json
+++ b/apps/server/package.json
@@ -15,6 +15,7 @@
     "@sentry/node": "8.25.0",
     "@stacks/blockchain-api-client": "7.13.2",
     "@stacks/stacks-blockchain-api-types": "7.13.2",
+    "@stackspulse/protocols": "workspace:*",
     "@t3-oss/env-core": "0.11.0",
     "drizzle-orm": "0.33.0",
     "h3": "1.12.0",
