--- a/biome.json
+++ b/biome.json
@@ -9,7 +9,7 @@
     "indentStyle": "space",
     "indentWidth": 2,
     "lineWidth": 80,
-    "ignore": [".next", "dist"]
+    "ignore": [".nitro", ".next", "dist"]
   },
   "linter": {
     "enabled": true,
@@ -22,6 +22,12 @@
         "noUselessElse": "off"
       }
     },
-    "ignore": [".next", "dist"]
+    "ignore": [
+      ".nitro",
+      ".next",
+      "dist",
+      "apps/web/src/lib/chartUtils.tsx",
+      "apps/web/src/components/ui/AreaChart.tsx"
+    ]
   }
 }
