--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "packageManager": "pnpm@9.7.0",
   "scripts": {
     "build": "pnpm turbo run build",
-    "format": "biome check --write --no-errors-on-unmatched --files-ignore-unknown=true",
+    "format": "biome check --write --no-errors-on-unmatched",
     "version": "pnpm changeset version && node scripts/create-release.mjs",
     "release": "pnpm changeset publish",
     "prepare": "husky"
