--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "packageManager": "pnpm@9.7.0",
   "scripts": {
     "build": "pnpm turbo run build",
-    "format": "biome check --write --no-errors-on-unmatched --files-ignore-unknown=true",
+    "format": "biome check --write --no-errors-on-unmatched",
     "version": "pnpm changeset version && node scripts/create-release.mjs",
     "release": "pnpm changeset publish",
     "prepare": "husky"
@@ -13,10 +13,10 @@
     "husky": "9.1.6"
   },
   "devDependencies": {
-    "@biomejs/biome": "1.9.2",
-    "@changesets/cli": "2.27.8",
+    "@biomejs/biome": "1.9.3",
+    "@changesets/cli": "2.27.9",
     "lint-staged": "15.2.10",
-    "turbo": "2.1.2"
+    "turbo": "2.1.3"
   },
   "lint-staged": {
     "*": [
