feat: upgrade to next.js 15

--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -3,7 +3,7 @@
   "version": "0.16.1",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "next dev --turbo",
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
@@ -26,7 +26,7 @@
     "date-fns": "4.1.0",
     "fathom-client": "3.7.2",
     "javascript-time-ago": "2.5.11",
-    "next": "14.2.15",
+    "next": "15.0.0",
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "recharts": "2.13.0-alpha.4",
@@ -43,7 +43,7 @@
     "@types/react-dom": "18.3.1",
     "autoprefixer": "10.4.20",
     "eslint": "8.57.0",
-    "eslint-config-next": "14.2.15",
+    "eslint-config-next": "15.0.0",
     "eslint-plugin-tailwindcss": "3.17.5",
     "postcss": "8.4.47",
     "radix-themes-tw": "0.2.3",
