feat: bar chart use tremor raw

--- a/biome.json
+++ b/biome.json
@@ -27,7 +27,8 @@
     },
     "ignore": [
       "apps/web/src/lib/chartUtils.tsx",
-      "apps/web/src/components/ui/AreaChart.tsx"
+      "apps/web/src/components/ui/AreaChart.tsx",
+      "apps/web/src/components/ui/BarChart.tsx"
     ]
   }
 }
