--- a/apps/server/fly.toml
+++ b/apps/server/fly.toml
@@ -6,18 +6,17 @@ primary_region = 'sjc'
 image = "ghcr.io/pradel/stackspulse/server:0.16.2"
 
 [http_service]
-  internal_port = 3000
-  force_https = true
-  auto_stop_machines = true
-  auto_start_machines = true
-  min_machines_running = 0
-  processes = ['app']
+internal_port = 3000
+force_https = true
+auto_stop_machines = "suspend"
+min_machines_running = 0
+processes = ['app']
 
-  [http_service.concurrency]
-    type = 'requests'
-    hard_limit = 1000
-    soft_limit = 900
+[http_service.concurrency]
+type = 'requests'
+hard_limit = 1000
+soft_limit = 900
 
 [[vm]]
-  size = 'shared-cpu-1x'
-  memory = '256mb'
+size = 'shared-cpu-1x'
+memory = '256mb'
