--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -26,9 +26,10 @@
     "date-fns": "4.1.0",
     "fathom-client": "3.7.2",
     "javascript-time-ago": "2.5.11",
-    "next": "15.0.0",
+    "next": "15.0.1",
     "react": "18.3.1",
     "react-dom": "18.3.1",
+    "react-is": "18.3.1",
     "recharts": "2.13.0",
     "sharp": "0.33.5",
     "tailwind-merge": "2.5.4",
@@ -38,12 +39,12 @@
     "zod": "3.23.8"
   },
   "devDependencies": {
-    "@types/node": "22.8.0",
-    "@types/react": "18.3.11",
+    "@types/node": "22.8.1",
+    "@types/react": "18.3.12",
     "@types/react-dom": "18.3.1",
     "autoprefixer": "10.4.20",
     "eslint": "9.13.0",
-    "eslint-config-next": "15.0.0",
+    "eslint-config-next": "15.0.1",
     "eslint-plugin-tailwindcss": "3.17.5",
     "postcss": "8.4.47",
     "radix-themes-tw": "0.2.3",
