--- a/apps/server/.env.development
+++ b/apps/server/.env.development
@@ -1,2 +1,8 @@
 NODE_ENV=development
 TURSO_DATABASE_URL=file:sqlite.db
+API_URL=http://localhost:3001
+WEB_URL=http://localhost:3000
+TWITTER_API_KEY=dev
+TWITTER_API_SECRET_KEY=dev
+TWITTER_ACCESS_TOKEN=dev
+TWITTER_ACCESS_TOKEN_SECRET=dev
