--- a/apps/server/package.json
+++ b/apps/server/package.json
@@ -21,6 +21,7 @@
     "h3": "1.13.0",
     "nitro-cors": "0.7.1",
     "postgres": "3.4.4",
+    "twitter-api-v2": "1.17.1",
     "unstorage": "1.12.0",
     "zod": "3.23.8",
     "zod-validation-error": "3.4.0"
