--- a/apps/server/Dockerfile
+++ b/apps/server/Dockerfile
@@ -61,7 +61,7 @@ USER nitro
 # Setup sqlite on a separate volume
 RUN mkdir -p /data
 VOLUME /data
-ENV TURSO_DATABASE_URL="/data/sqlite.db"
+ENV LOCAL_DATABASE_URL="/data/sqlite.db"
 
 # Start the server by default, this can be overwritten at runtime
 EXPOSE 3000
