--- a/apps/server-indexer/package.json
+++ b/apps/server-indexer/package.json
@@ -1,18 +1,23 @@
 {
-  "name": "@stackspulse/server",
+  "name": "@stackspulse/server-indexer",
   "version": "0.20.2",
   "private": true,
   "scripts": {
     "build": "nitro build",
-    "dev": "nitro dev",
+    "db:generate": "prisma generate",
+    "db:migrate:prod": "prisma migrate deploy",
+    "dev": "dotenvx run --env-file=.env.development --env-file=.env.development.local -- nitro dev --port 3001",
     "prepare": "nitro prepare",
-    "preview": "node .output/server/index.mjs"
+    "prisma:migrate:dev": "dotenvx run --env-file=.env.development -- prisma migrate dev",
+    "prisma:studio:dev": "dotenvx run --env-file=.env.development -- prisma studio",
+    "typecheck": "tsc --noEmit"
   },
   "dependencies": {
-    "@dotenvx/dotenvx": "1.39.0"
+    "@dotenvx/dotenvx": "1.39.0",
+    "@prisma/client": "6.5.0",
+    "prisma": "6.5.0"
   },
   "devDependencies": {
-    "nitropack": "2.11.7",
-    "prisma": "6.5.0"
+    "nitropack": "2.11.7"
   }
 }
