--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -50,7 +50,7 @@ services:
     image: cloudflare/cloudflared:2025.2.1
     container_name: cloudflared
     restart: unless-stopped
-    command: tunnel --url http://server-indexer:3001
+    command: tunnel --url http://host.docker.internal:3001
     depends_on:
       - server-indexer
     networks:
